# pronounsapp

./: .gitignore  app.py  logging_config_slacksystem.py  pyproject.toml
