[tool.poetry]
name = "pronounsapp"
version = "0.1.0"
description = "An app to substitute pronouns and names into a given text"
authors = ["SlackSystem <slack@slacksystem.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
ruff = "^0.0.264"
ruff-lsp = "^0.0.25"
shiny = "^0.3.3"
tiktoken = "^0.3.3"
logging-config-slacksystem = {path = "/home/kat/projects/logging_config/dist/logging_config_slacksystem-1.0.0-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
pyright = "^1.1.306"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
